# zephyr-examples

./: README.md
ble_connect_sample/: README.md
ble_connect_sample/base/: CMakeLists.txt  bt.conf  console.conf  prj.conf  readme.md  usb_cdc.conf
ble_connect_sample/base/inc/: ble_base.h
ble_connect_sample/base/src/: ble_base.c  main.c
ble_connect_sample/mobile/: CMakeLists.txt  bt.conf  prj.conf  readme.md  rtt_console.conf
ble_connect_sample/mobile/inc/: hal_imu.h  imu_driver_defines.h  mobile_connect.h  mobile_node_ble.h
ble_connect_sample/mobile/lib/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  zephyr_i2c.c  zephyr_i2c.h
ble_connect_sample/mobile/src/: hal_imu.c  main.c  mobile_connect.c  mobile_node_ble.c
mqtt_sample/: README.md
mqtt_sample/python/: paho_example_simple.py
